# bucket-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DECOUPLING.md  README.md  SECURITY.md  clippy.toml  fix_cargo_deps.sh  patch_event_loop.patch  patch_mod.patch  patch_settings.patch  patch_tui_errors.sh  patch_tui_errors2.sh  patch_tui_errors3.sh  patch_updater_tests.sh  phase1_rename.sh  rename_mapping.json  skills-lock.json  test_config_load.rs
crates/codegen/bucket-agent/: Cargo.toml  README.md
crates/codegen/bucket-agent-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/codegen/bucket-agent-core/benches/: session_list.rs
crates/codegen/bucket-agent-core/changelogs/: 0.2.100.json  0.2.100.md  0.2.101.json  0.2.101.md  0.2.16.json  0.2.16.md  0.2.17.json  0.2.17.md  0.2.26.json  0.2.26.md  0.2.3.json  0.2.34.json  0.2.34.md  0.2.37.json  0.2.37.md  0.2.4.json  0.2.4.md  0.2.40.json  0.2.40.md  0.2.43.json  0.2.43.md  0.2.45.json  0.2.45.md  0.2.46.json  0.2.46.md  0.2.49.json  0.2.49.md  0.2.50.json  0.2.50.md  0.2.51.json  0.2.51.md  0.2.52.json  0.2.52.md  0.2.55.json  0.2.55.md  0.2.56.json  0.2.56.md  0.2.57.json  0.2.57.md  0.2.58.json  (+49 more)
crates/codegen/bucket-agent-core/src/: active_sessions.rs  builtin.rs  bundle.rs  claude_import.rs  claude_import_state.rs  cli_models.rs  instrumentation.rs  lib.rs  managed_config.rs  mcp_doctor.rs  plugin.rs  tier.rs
crates/codegen/bucket-agent-core/tests/: git_contention_e2e.rs  sandbox_requirements_pin.rs  session_load_perf.rs  team_managed_config.rs  test_active_sessions_smoke.rs  test_agent_type_invariant.rs  test_bucket_session_update.rs  test_built_binary_e2e.rs  test_config_update_isolation.rs  test_debug_logging.rs  test_doom_loop_recovery.rs  test_doomloop_capture.rs  test_fork_session.rs  test_global_extra_headers_e2e.rs  test_heap_profile_monitor.rs  test_leader_death_repro.rs  test_leader_soak.rs  test_leader_stdio_integration.rs  test_leader_version_skew.rs  test_mcp_integration.rs  test_mcp_permission_persistence.rs  test_refusal_stop_reason.rs  test_sampling_client.rs  test_settings_refresh.rs  test_subagent_orphan_reconcile.rs  test_summary_reasoning_effort.rs  test_trusted_local_plugin_refresh_e2e.rs  test_vendor_compat.rs  trace_replay.rs
crates/codegen/bucket-agent/src/: agent.rs  builder.rs  config.rs  discovery.rs  lib.rs  repo.rs  system_reminder.rs  timing.rs
crates/codegen/bucket-agent/templates/: apply_patch_prompt.md  prompt.md  subagent_prompt.md
crates/codegen/bucket-announcements/: Cargo.toml  generate.sh
crates/codegen/bucket-announcements/src/: lib.rs
crates/codegen/bucket-bin/: Cargo.toml
crates/codegen/bucket-bin/src/: main.rs
crates/codegen/bucket-chat-state/: Cargo.toml
crates/codegen/bucket-chat-state/src/: commands.rs  compaction_mode.rs  compaction_transcript.rs  compaction_utils.rs  conversation_util.rs  handle.rs  lib.rs  persistence.rs  types.rs  usage.rs
crates/codegen/bucket-config-types/: Cargo.toml
crates/codegen/bucket-config-types/src/: flags.rs  lib.rs  mcp.rs  memory.rs  permission.rs  pool.rs
crates/codegen/bucket-hooks/: Cargo.toml
crates/codegen/bucket-hooks/examples/: README.md
crates/codegen/bucket-hooks/src/: config.rs  discovery.rs  dispatcher.rs  env_expand.rs  event.rs  lib.rs  matcher.rs  test_support.rs  trust.rs
crates/codegen/bucket-hooks/tests/: integration.rs
crates/codegen/bucket-http/: Cargo.toml
crates/codegen/bucket-http/src/: lib.rs
crates/codegen/bucket-plugin-marketplace/: Cargo.toml
crates/codegen/bucket-plugin-marketplace/src/: catalog.rs  config.rs  git.rs  index.rs  install_resolve.rs  installer.rs  lib.rs  matcher.rs  scanner.rs  types.rs
crates/codegen/bucket-prompt-queue/: Cargo.toml
crates/codegen/bucket-prompt-queue/src/: lib.rs
crates/codegen/bucket-shell-session-support/: Cargo.toml
crates/codegen/bucket-shell-session-support/src/: lib.rs  managed_mcp.rs
crates/codegen/bucket-subagent-resolution/: Cargo.toml
crates/codegen/bucket-subagent-resolution/src/: config.rs  context.rs  lib.rs  overrides.rs  resume.rs  types.rs
crates/codegen/bucket-tools/: Cargo.toml  THIRD_PARTY_NOTICES.md  build.rs
crates/codegen/bucket-tools/schema/: tool_meta.schema.json
crates/codegen/bucket-tools/src/: attribution.rs  bridge.rs  gitignore.rs  lib.rs  normalization.rs  persistence.rs  tool_taxonomy.rs  versions.rs
crates/codegen/bucket-tools/tests/: cgroup_memory_test.rs  path_suggestions_production.rs  web_citation_counter.rs
crates/codegen/bucket-tui-minimal/: Cargo.toml
crates/codegen/bucket-tui-minimal/src/: auth.rs  commit.rs  full_view.rs  lib.rs  live.rs  overlay.rs  panel.rs  plan.rs  todo.rs  welcome.rs
crates/codegen/bucket-workspace/: Cargo.toml
crates/codegen/bucket-workspace-client/: Cargo.toml
crates/codegen/bucket-workspace-client/src/: lib.rs
crates/codegen/bucket-workspace/src/: activity.rs  capability.rs  config.rs  daemonize.rs  diag_server.rs  discovery.rs  envrc.rs  error.rs  folder_trust.rs  fs_notify.rs  handle.rs  hub.rs  hub_auth.rs  hub_channel.rs  hub_ids.rs  hub_server.rs  lib.rs  mcp.rs  preview_supervisor.rs  project_config.rs  recovery.rs  rpc_envelope.rs  status_config.rs  trust.rs  workspace_ops.rs
crates/common/bucket-hub-core/: Cargo.toml
crates/common/bucket-hub-core/src/: inner.rs  local.rs  registry.rs  remote.rs  resolver.rs  transport.rs
crates/common/bucket-hub-core/tests/: compound_resolver.rs  inner_dispatch.rs  internal_error_detail.rs  local_transport.rs  remote_proxy.rs  tool_registry.rs  transport_trait.rs  workspace_unavailable.rs
crates/common/bucket-hub-mcp-adapter/: Cargo.toml
crates/common/bucket-hub-mcp-adapter/src/: bridge.rs  lib.rs
crates/common/bucket-tool-protocol/: Cargo.toml
crates/common/bucket-tool-protocol/src/: envelope.rs  error_codes.rs  frames.rs  registration.rs  session_event.rs  turn_hook.rs
crates/common/bucket-tool-protocol/tests/: identifier_validation.rs  jsonrpc_envelope.rs  serde_roundtrip.rs  tool_id_derivation.rs
crates/common/bucket-tool-runtime/: Cargo.toml
(+1425 files in other folders)
