[package]
name = "bucket-bin"
version = "0.1.7"
edition.workspace = true
license = "Apache-2.0"
authors = ["julesklord"]
default-run = "bucket"

# Composition-root binary for the Bucket TUI. The artifact is still named
# `bucket`. This package exists so the binary can link both the pager
# library and the optional `bucket-tui-minimal` render mode: `minimal`
# depends on `bucket-tui`, so the pager library cannot depend back on it
# (cargo cycle). The binary installs the minimal-mode IoC hooks at startup.
[[bin]]
name = "bucket"
path = "src/main.rs"

[dependencies]
# The pager library (all application logic + the public API main.rs drives).
bucket-tui = { path = "../bucket-tui" }
# Optional scrollback-native render mode, wired in via the fn-pointer seam.
bucket-tui-minimal = { path = "../bucket-tui-minimal" }

# Agent runtime + leader/stdio/headless entry points.
bucket-agent-core = { workspace = true }
bucket-updater = { path = "../bucket-updater" }
bucket-version = { workspace = true }
bucket-telemetry = { workspace = true }
bucket-workspace = { workspace = true }
bucket-crash-handler = { path = "../bucket-crash-handler" }
bucket-acp = { workspace = true }

# Async runtime + misc.
tokio = { workspace = true, features = [
    "sync",
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
    "io-util",
    "io-std",
] }
tokio-util = { workspace = true, features = ["compat"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
dunce = { workspace = true }
semver = { workspace = true }
bucket-tty-utils = { workspace = true }
bucket-config = { workspace = true }
bucket-sandbox = { path = "../bucket-sandbox", default-features = false }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }

# Binary hardening: compile-time string + control-flow obfuscation.
obfstr = { workspace = true }
cryptify = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
# Default allocator on Unix; gated by the `jemalloc` feature (see main.rs
# `#[global_allocator]`, cfg(all(feature = "jemalloc", unix))).
# `stats` is binary-scoped only (not workspace-wide) so this CLI jemalloc
# link gets --enable-stats for stats.allocated / stats.resident mallctl.
tikv-jemallocator = { workspace = true, optional = true, features = ["stats"] }
# Raw mallctl for the memory-cliff arena purge hook (see
# `purge_jemalloc_retained_pages` + the `install_release_hook` call in
# main.rs). Same version family as the
# allocator; adds no new build units beyond what tikv-jemallocator pulls in.
tikv-jemalloc-sys = { workspace = true, optional = true }
# Heap-profile / stats mallctl helpers (prof.active, prof.dump, epoch, stats.*).
tikv-jemalloc-ctl = { workspace = true, optional = true, features = ["stats", "use_std"] }

[dev-dependencies]
serial_test = { workspace = true }
# `PagerArgs::try_parse_from` in the CLI-parsing unit tests (needs the
# `clap::Parser` trait in scope).
clap = { workspace = true, features = ["derive"] }

[features]
default = [
    "jemalloc",
    "sandbox-enforce",
    ]
default-bazel = [
    "jemalloc",
    "sandbox-enforce",
    ]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-sys", "dep:tikv-jemalloc-ctl"]
sandbox-enforce = ["bucket-tui/sandbox-enforce"]
release-dist = ["bucket-tui/release-dist"]
