[package]
license = "Apache-2.0"
name = "bucket-config-types"
version = "0.1.0"
edition.workspace = true
description = "Leaf configuration value types for the bucket CLI, extracted from bucket-agent-core for dependency inversion."

[dependencies]
agent-client-protocol = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
bucket-announcements = { workspace = true }
bucket-config = { workspace = true }
bucket-mcp = { workspace = true }

[features]
default-bazel = []

[lints]
workspace = true
