[package]
license = "Apache-2.0"
name = "bucket-http"
version = "0.1.0"
edition.workspace = true
description = "Shared reqwest HTTP clients and User-Agent construction for the bucket CLI."

[dependencies]
reqwest = { workspace = true, features = ["blocking"] }
reqwest-middleware = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bucket-auth = { workspace = true, features = ["middleware"] }
bucket-sampler = { path = "../bucket-sampler" }
bucket-telemetry = { workspace = true }
bucket-version = { workspace = true }
bucket-workspace = { workspace = true }

[lints]
workspace = true
