[package]
edition.workspace = true
license = "Apache-2.0"
name = "bucket-prompt-queue"
version = "0.1.0"
description = "Shared prompt-queue wire types for bucket-agent-core and bucket-tui"

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
