[package]
license = "Apache-2.0"
name = "bucket-subagent-resolution"
version = "0.1.0"
edition.workspace = true
description = "Subagent configuration resolution: merges persona, role, and spawn-time overrides into a resolved spec"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bucket-sampling-types = { path = "../bucket-sampling-types" }
bucket-tools = { path = "../bucket-tools" }
bucket-tool-types.workspace = true
# TODO(phase2): add these when resolve_subagent_spec() composition is implemented:
# bucket-agent = { path = "../bucket-agent" }  # AgentDefinition lookup
# bucket-fast-worktree = { path = "../bucket-fast-worktree" }  # worktree creation

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
