[package]
license = "Apache-2.0"
edition.workspace = true
name = "bucket-tools"
version = "0.1.220-alpha.4"
description = "Bucket tools library"

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
dirs = { workspace = true }
derive_more = { workspace = true, features = ["from", "try_into"] }
dunce = { workspace = true }
fs2 = { workspace = true }
educe = { workspace = true, features = ["Debug"] }
async-openai = { workspace = true }
bucket-tty-utils = { workspace = true }
bucket-config = { path = "../bucket-config" }
bucket-tools-api = { path = "../bucket-tools-api" }
bucket-workspace-types = { path = "../bucket-workspace-types" }
bucket-version = { workspace = true }
bucket-interjection-core = { workspace = true }
bucket-token-estimation = { workspace = true }
async-lsp = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
crc32fast = { workspace = true }
ignore = { workspace = true }
infer = { workspace = true }
globset = { workspace = true }
image = { workspace = true, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff", "ico"] }
pdf_oxide = { workspace = true }
# PPTX text extraction (implementations/read_file/pptx.rs). Deliberately NOT
# `workspace = true`: the workspace `zip` pin has default features on, which
# drag aes/bzip2/lzma/zstd into the shipped pager binary. PPTX entries are
# only ever stored or deflated.
zip = { version = "3", default-features = false, features = ["deflate-flate2"] }
quick-xml = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
minijinja = { version = "2", features = ["custom_syntax"] }
parking_lot = { workspace = true }
htmd = { workspace = true }
scraper = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json", "gzip", "brotli", "deflate"] }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
bucket-tool-runtime = { workspace = true }
bucket-tool-types = { workspace = true }
bucket-tool-protocol = { workspace = true }
bucket-hub-core = { workspace = true }
bucket-hub-sdk = { workspace = true }

futures = { workspace = true }
similar = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
strip-ansi-escapes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "process",
    "rt",
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
] }
tokio-util = { workspace = true, features = ["compat"] }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
bucket-env = { workspace = true }
serde_yaml = { workspace = true }
shellexpand = "3.1"
tempfile = { workspace = true }
which = { workspace = true }

chrono = { workspace = true }
futures-util = { workspace = true }
bucket-sandbox = { path = "../bucket-sandbox", default-features = false }
bucket-file-utils = { path = "../bucket-file-utils" }

[target.'cfg(unix)'.dependencies]
command-fds = { version = "0.3", features = ["tokio"] }
nix = { workspace = true, features = ["signal", "process", "fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

# windows: util::spawn uses Win32 Job Objects (CreateJobObjectW,
# AssignProcessToJobObject, TerminateJobObject) and process creation flags
# (CREATE_NO_WINDOW, DETACHED_PROCESS, CREATE_NEW_PROCESS_GROUP).
[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
dirs = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
wiremock = { workspace = true }
bucket-test-utils = { workspace = true }

[build-dependencies]
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
flate2 = { workspace = true }
tar = { workspace = true }

[lints]
workspace = true

[features]
default-bazel = ["serde"]
default = ["serde"]
serde = []
