[package]
license = "Apache-2.0"
name = "bucket-workspace-client"
version = "0.1.0"
edition.workspace = true
description = "Lightweight typed client for hub-proxied workspace.* RPCs (shared by bucket-agent-core proxy mode and other consumers)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
bucket-hub-sdk = { workspace = true }
bucket-workspace-types = { workspace = true }
bucket-tool-protocol = { workspace = true }
bucket-tool-runtime = { workspace = true }

[features]
default = []
default-bazel = []
[dev-dependencies]
schemars = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
bucket-tool-types = { workspace = true }

[lints]
workspace = true
