[package]
license = "Apache-2.0"
name = "bucket-workspace"
version = "0.1.220-alpha.4"
edition.workspace = true
description = "Core host-local workspace library (FS, VCS, execution, discovery) for bucket-agent-core and remote sampler"

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
# Diagnostics HTTP server (in-guest readiness/status endpoint); pinned to the
# workspace version already used by the sibling preview proxy.
axum = { workspace = true }
dunce = { workspace = true }
bucket-version = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
fs2 = { workspace = true }
dirs = "6"
parking_lot = { workspace = true }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
ignore = { workspace = true }
md5 = { workspace = true }
regex = { workspace = true }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-std",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "sync",
] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "v7"] }
bucket-agent = { path = "../bucket-agent" }
bucket-tools = { path = "../bucket-tools" }
bucket-tools-api = { path = "../bucket-tools-api" }
bucket-workspace-client = { path = "../bucket-workspace-client" }
bucket-workspace-types = { path = "../bucket-workspace-types" }
bucket-config = { workspace = true }
# Leaf config value types (RemoteSettings, BoolFlag) for the folder-trust decision.
bucket-config-types = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
dashmap = { workspace = true }
agent-client-protocol = { workspace = true }
bucket-acp = { workspace = true }
bucket-codebase-graph = { path = "../bucket-codebase-graph" }
bucket-paths = { path = "../bucket-paths" }
base64 = { workspace = true }
infer = { workspace = true }
sha2 = { workspace = true, features = ["force-soft"] }
bstr = "1.12.1"
hashbrown = "0.16.1"
nohash-hasher = "0.2.0"
rustc-hash = "2.1.1"
nucleo = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
smallvec = { workspace = true }
chrono = { workspace = true }
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
url = { workspace = true }
bucket-env = { workspace = true }
humantime-serde = { workspace = true }
prometheus = { workspace = true }
glob = "0.3"
bucket-sandbox = { path = "../bucket-sandbox", default-features = false }
bucket-hooks = { path = "../bucket-hooks" }
bucket-hunk-tracker = { path = "../bucket-hunk-tracker" }
# `metrics` enables the SDK's metric-donation client (periodic Prometheus
# registry gather → OTLP → hub donation pump); see metric_donation_reporter.
bucket-hub-sdk = { workspace = true, features = ["metrics"] }
bucket-hub-mcp-adapter = { path = "../../common/bucket-hub-mcp-adapter" }
bucket-mcp = { path = "../bucket-mcp" }
bucket-file-utils = { path = "../bucket-file-utils" }
bucket-auth = { path = "../bucket-auth" }
bucket-telemetry = { workspace = true }
bucket-tty-utils = { workspace = true }
bucket-sqlite-journal = { workspace = true }
reqwest = { workspace = true }
bucket-tool-protocol = { workspace = true }
bucket-tool-runtime = { workspace = true }
bucket-tool-types = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
urlencoding = "2"
bucket-fast-worktree = { path = "../bucket-fast-worktree", features = ["metadata"] }
# tonic: Status/Code mapping for deploy errors in workspace_ops.
tonic = { workspace = true }

bucket-fsnotify = { path = "../bucket-fsnotify" }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
# "enable" required for the SDK's spans to record at all.
fastrace = { workspace = true, features = ["enable"] }
bucket-tracing = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tempfile = { workspace = true }
zstd = { workspace = true }

# Only referenced by the Unix self-daemonize path (fork/setsid/dup2/chdir).
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

# Only referenced by the Windows self-daemonize path (SetStdHandle).
[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[[bin]]
name = "bucket-workspace-server"
path = "src/bin/workspace_server.rs"

[[bin]]
name = "workspace-server-probe"
path = "src/bin/workspace_server_probe.rs"

[features]
default = ["sandbox-enforce"]
compression = []
test-support = []
sandbox-enforce = ["bucket-sandbox/enforce"]
default-bazel = [
    "sandbox-enforce",
    ]

[dev-dependencies]
filetime = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
bucket-test-utils = { path = "../../common/bucket-test-utils" }
# Decode tar.gz archives produced by workspace upload helpers in tests.
flate2 = { workspace = true }
tar = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["tokio-tungstenite"]

[lints]
workspace = true
