[package]
license = "Apache-2.0"
name = "bucket-hub-core"
version = "0.1.0"
edition.workspace = true
description = "Transport, ToolRegistry, and resolver abstractions for the xAI Computer Hub"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bucket-tool-protocol = { workspace = true }
bucket-tool-runtime = { workspace = true }
bucket-tool-types = { workspace = true }

[dev-dependencies]
dashmap = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "sync"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
