[package]
license = "Apache-2.0"
name = "bucket-tool-protocol"
version = "0.1.0"
edition.workspace = true
description = "Wire-protocol types for the xAI Computer Hub"

[dependencies]
bucket-tool-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[lints]
workspace = true
