[package]
license = "Apache-2.0"
name = "bucket-tool-runtime"
version = "0.1.0"
edition.workspace = true
description = "Unified Tool trait, dispatch trait, error taxonomy, notifications, and search index for the xAI Computer Hub"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-util = { workspace = true }
bucket-tools-api = { workspace = true }
bucket-tool-protocol = { workspace = true }
bucket-tool-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util"] }

[lints]
workspace = true
